...
        imageView.contentMode = .scaleAspectFit
        imageView.layer.cornerRadius = 20
        imageView.layer.masksToBounds = true
        imageView.layer.borderWidth = 2
        imageView.layer.borderColor = UIColor.clear.cgColor
        
        imageView.accessibilityIdentifier = "Poster"
    }
    
    // MARK: - Actions
    
    @IBAction private func yesButtonClicked(_ sender: Any) {
        presenter.didAnswer(isYes: true)
...
    
    func updateUI(with viewModel: QuizStepViewModel) {
        imageView.image = viewModel.image
        textLabel.text = viewModel.question
        counterLabel.text = viewModel.questionNumber
        
        counterLabel.accessibilityIdentifier = "Index"
    }
    
    func showFinalResults(with alertModel: AlertModel) {
        alertPresenter?.showAlert(model: alertModel)
    }
    
...
