...
        Средняя точность: \(String(format: "%.2f", totalAccuracy))%
        """

        let alertModel = AlertModel(
            title: "Игра окончена",
            message: alertMessage,
            buttonText: "Сыграть ещё раз",
            completion: { [weak self] in
                self?.reset()
                self?.questionFactory?.requestNextQuestion()
            }
        )
        view?.showFinalResults(with: alertModel)
...
